feat: update user role permission
