# backend/controllers/item.go
@@ -2,10 +2,12 @@ package controllers
 
 import (
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 	"github.com/tapanchoi62/WebApp-QuanLyBaoTriXe/backend/config"
 	"github.com/tapanchoi62/WebApp-QuanLyBaoTriXe/backend/models"
+	"github.com/tapanchoi62/WebApp-QuanLyBaoTriXe/backend/utils"
 )
 
 // GetItem godoc
@@ -16,11 +18,21 @@ import (
 // @Produce json
 // @Success 200 {array} map[string]interface{}
 // @Security BearerAuth
-// @Router /api/item [get]
+// @Router /api/items [get]
 func GetItems(c *gin.Context) {
-	var Item []models.Item
-	config.DB.Find(&Item)
-	c.JSON(http.StatusOK, Item)
+	page, _ := strconv.Atoi(c.DefaultQuery("page", "1"))
+	pageSize, _ := strconv.Atoi(c.DefaultQuery("pageSize", "4"))
+	search := c.Query("search")
+
+	data, paging, err := utils.Paginate[models.Item](config.DB.Model(&models.Item{}), page, pageSize, search, []string{"name", "category"})
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"data":       data,
+		"pagination": paging,
+	})
 }
 
 // GetItem godoc
@@ -33,7 +45,7 @@ func GetItems(c *gin.Context) {
 // @Success 200 {object} models.Item
 // @Failure 404 {object} map[string]string
 // @Security BearerAuth
-// @Router /api/item/{id} [get]
+// @Router /api/items/{id} [get]
 func GetItem(c *gin.Context) {
 	id := c.Param("id")
 	var Item models.Item
@@ -41,7 +53,9 @@ func GetItem(c *gin.Context) {
 		c.JSON(http.StatusNotFound, gin.H{"error": "Item not found"})
 		return
 	}
-	c.JSON(http.StatusOK, Item)
+	c.JSON(http.StatusOK, gin.H{
+		"data": Item,
+	})
 }
 
 // CreateItem godoc
@@ -53,7 +67,7 @@ func GetItem(c *gin.Context) {
 // @Param Item body models.Item true "Item info"
 // @Success 201 {object} map[string]interface{}
 // @Security BearerAuth
-// @Router /api/item [post]
+// @Router /api/items [post]
 func CreateItem(c *gin.Context) {
 	var input models.Item
 	if err := c.ShouldBindJSON(&input); err != nil {
@@ -75,7 +89,7 @@ func CreateItem(c *gin.Context) {
 // @Success 200 {object} models.Item
 // @Failure 404 {object} map[string]string
 // @Security BearerAuth
-// @Router /api/item/{id} [put]
+// @Router /api/items/{id} [put]
 func UpdateItem(c *gin.Context) {
 	id := c.Param("id")
 	var item models.Item
@@ -105,7 +119,7 @@ func UpdateItem(c *gin.Context) {
 // @Success 200 {object} map[string]string
 // @Failure 404 {object} map[string]string
 // @Security BearerAuth
-// @Router /api/item/{id} [delete]
+// @Router /api/items/{id} [delete]
 func DeleteItem(c *gin.Context) {
 	id := c.Param("id")
 	var item models.Item
